Implemented the CLI

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -5,6 +5,8 @@ description = "Add your description here"
 readme = "README.md"
 requires-python = ">=3.11"
 dependencies = [
+    "toml>=0.10.2",
+    "typer>=0.19.2",
 ]
 
 [build-system]
