--- a/nbs/test_snippet.toml
+++ b/nbs/test_snippet.toml
@@ -9,7 +9,7 @@ command = "ls -l"
 Description = "(lll) List the contents of the current directory in long format"
 Output = ""
 Tag = [ "list", "directory",]
-alias = "lll"
+name = "lll"
 
 [[Snippets]]
 command = "echo 'Hello world'"
